<resources>
    <string name="app_name">Quiz</string>
    <string name="welcome_name">Witaj w grze!</string>
    <string name="button_true">Prawda</string>
    <string name="button_false">Fałsz</string>
    <string name="button_next">Następne</string>

    <string name="q_extension">Rozszerzenie pliku android to .akp</string>
    <string name="q_processes">Każdy proces jest uruchamiany na wirtualnej maszynie</string>
    <string name="q_activity">Jednym z activity może być wysyłanie wiadomości e-mail</string>
    <string name="q_activity_p">Jednym ze stanów activity może być blocked</string>
    <string name="q_java">Java nie jest językiem programowania aplikacji na androida</string>

    <string name="incorrect_answer">Zła odpowiedź!</string>
    <string name="correct_answer">Dobra odpowiedź!</string>

    <string name="q_prompt">Czy na pewno chcesz zobaczyć odpowiedź?</string>
    <string name="button_show_prompt">Pokaż podpowiedź</string>
    <string name="button_prompt">Podpowiedź</string>

    <string name="answer_was_shown">Odpowiedź była już wyświetlona!</string>
</resources>