<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PromptActivity">

    <TextView
        android:id="@+id/q_prompt_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/q_prompt" />

    <Button
        android:id="@+id/show_prompt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_prompt" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        tools:text="@string/button_prompt" />

</LinearLayout>